--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" src="assets/logophoto.svg">
+    <meta property="og:image" content="assets/logophoto.svg">
+
     <title>Florida Enviormental Services</title>
     <link rel="icon" href="assets/logophoto.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
