--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:image" content="assets/logophoto.svg">
+    <meta property="og:image" content="assets/logophoto.svg"/>
+    <meta property="og:description"  content="Florida's Complete Outdoor Experts"/>
+
 
     <title>Florida Enviormental Services</title>
     <link rel="icon" href="assets/logophoto.svg">
