--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <meta property="og:title"        content="Florida Enviornmental Services" />
     <meta property="og:image" content="assets/logophoto.svg"/>
     <meta property="og:description"  content="Florida's Complete Outdoor Experts"/>
 
-
-    <title>Florida Enviormental Services</title>
+    <title>Florida Enviornmental Services</title>
     <link rel="icon" href="assets/logophoto.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
