--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="Florida Enviornmental Services" />
-    <meta property="og:image" content="/assets/logophoto.svg"/>
+    <meta property="og:image" content="/assets/logonobg.png"/>
     <meta property="og:description"  content="Florida's Complete Outdoor Experts"/>
 
     <title>Florida Enviornmental Services</title>
