--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:title" content="Florida Enviornmental Services" />
-    <meta property="og:image" content="/assets/logonobg.png"/>
     <meta property="og:description"  content="Florida's Complete Outdoor Experts"/>
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="assets/logonobg.png"/> 
+    <meta property="og:image:width"      content="1200" />
+    <meta property="og:image:height"     content="630" />
+   
 
     <title>Florida Enviornmental Services</title>
     <link rel="icon" href="assets/logophoto.svg">
