--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <header class="hero" id="hero">
 
         <div class="contentBox">
-            <h1 id="">"From Sod to Stone...<br>
+            <h1>"From Sod to Stone...<br>
                       Florida's Complete Outdoor Experts"</h1>
           <div>
           </div>    
@@ -198,47 +198,27 @@
 </section>
 
 
-   <!--  <section class="gallerySection">
-
-        <div class="contentBoxGallery">
-
-                <div class="gallery">
-                    <div class="galleryCard">
-                        <image class="galleryImage" src="gallery/pavers.jpg"></image>
-                    </div>
+    <section class="gallerySection">
+        <div class="slider-wrapper">
+                <div class="slider">
+                    <image id="slide-1" class="galleryImage" src="gallery/pavers.jpg"></image>
+                    <image id="slide-2" class="galleryImage" src="gallery/pavers2.jpg"></image>
+                    <image id="slide-3" class="galleryImage" src="gallery/pressurewashing.jpg"></image>
+                    <image id="slide-4" class="galleryImage" src="gallery/turf.jpg"></image>
+                    <image id="slide-5" class="galleryImage" src="gallery/turf2.jpg"></image>
+                    <image id="slide-6" class="galleryImage" src="gallery/turf3.jpg"></image>
+                    <image id="slide-7" class="galleryImage" src="gallery/landscaping.jpg"></image>
                 </div>
-                <div class="gallery">
-                    <div class="galleryCard">
-                        <image class="galleryImage" src="#"></image>
-                    </div>
+                <div class="slider-nav">
+                    <a href="#slide-1"></a>
+                    <a href="#slide-2"></a>
+                    <a href="#slide-3"></a>
+                    <a href="#slide-4"></a>
+                    <a href="#slide-5"></a>
+                    <a href="#slide-6"></a>
+                    <a href="#slide-7"></a>
                 </div>
-                <div class="gallery">
-                    <div class="galleryCard">
-                        <image class="galleryImage" src="#"></image>
-                    </div>
-                </div>
-                <div class="gallery">
-                    <div class="galleryCard">
-                        <image class="galleryImage" src="#"></image>
-                    </div>
-                </div>
-                <div class="gallery">
-                    <div class="galleryCard">
-                        <image class="galleryImage" src="#"></image>
-                    </div>
-                </div>
-                <div class="gallery">
-                    <div class="galleryCard">
-                        <image class="galleryImage" src="#"></image>
-                    </div>
-                </div>
-                <div class="gallery">
-                    <div class="galleryCard">
-                        <image class="galleryImage" src="#"></image>
-                    </div>
-                </div> -->
-
-        
+        </div>
     </section>
     
     <section class="contact" id="contact">
@@ -263,8 +243,7 @@
             </div>
         </div>
     </section>
-   
-  
+
     <script src="script.js"></script> 
 
   </body>   
