--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
     <section class="gallerySection">
         <div class="slider-wrapper">
                 <div class="slider">
-                    <image id="slide-1" class="galleryImage" src="gallery/pavers.jpg"></image>
-                    <image id="slide-2" class="galleryImage" src="gallery/pavers2.jpg"></image>
-                    <image id="slide-3" class="galleryImage" src="gallery/pressurewashing.jpg"></image>
-                    <image id="slide-4" class="galleryImage" src="gallery/turf.jpg"></image>
-                    <image id="slide-5" class="galleryImage" src="gallery/turf2.jpg"></image>
-                    <image id="slide-6" class="galleryImage" src="gallery/turf3.jpg"></image>
-                    <image id="slide-7" class="galleryImage" src="gallery/landscaping.jpg"></image>
+                    <image id="slide-1" src="gallery/pavers.jpeg"></image>
+                    <image id="slide-2" src="gallery/pavers2.jpg"></image>
+                    <image id="slide-3" src="gallery/pressurewashing.jpg"></image>
+                    <image id="slide-4" src="gallery/turf.jpg"></image>
+                    <image id="slide-5" src="gallery/turf2.jpg"></image>
+                    <image id="slide-6" src="gallery/turf3.jpg"></image>
+                    <image id="slide-7" src="gallery/landscaping.jpg"></image>
                 </div>
                 <div class="slider-nav">
                     <a href="#slide-1"></a>
